[code] imporved schedular api
